Fixed directory structure to be multi-platform.

--- a/content/manager.xhtml
+++ b/content/manager.xhtml
@@ -194,7 +194,7 @@ function selectPane(pane) {
   </div>
   <div style="display:none" id="servicepane">
 
-  <img style="position:absolute;left:850px;top:20px" src="images/experiment.png"/>
+  <a target="_blank" href="http://mozillalabs.com/browser-contacts"><img style="position:absolute;left:850px;top:20px" src="images/experiment.png"/></a>
   <p style="color:#505050;font-weight:normal">
   This is a <b>Mozilla Labs Experiment</b>.  It is NOT production-quality code.  It
   may crash, generate incorrect output, or contain security bugs.  Please do not use it
