Add first run, update URL, and case-insensitive comparison of indexed fields.

--- a/content/manager.xhtml
+++ b/content/manager.xhtml
@@ -199,7 +199,7 @@ function selectPane(pane) {
   This is a <b>Mozilla Labs Experiment</b>.  It is NOT production-quality code.  It
   may crash, generate incorrect output, or contain security bugs.  Please do not use it
   on Firefox profile you cannot afford to lose.  If you do not know what a Firefox Profile
-  is, you may want to read about them <a href="http://kb.mozillazine.org/Profile_Manager">here</a>;
+  is, you may want to read about them <a href="http://support.mozilla.com/en-US/kb/Managing+profiles?bl=n&s=profile&as=q">here</a>;
   they are a good way to experiment with Firefox addons without putting your data at risk.
   </p>
 
