--- a/content/directory.xhtml
+++ b/content/directory.xhtml
@@ -28,7 +28,7 @@ This experimental release of the add-on has only a couple importers,
 but we will release more as soon as we can.
 </p>
 <p>
-Please visit <a href="http://mozillalabs.com/browser-contacts">our site</a>
+Please visit <a href="http://mozillalabs.com/conceptseries/identity/contacts/">our site</a>
 and comment to let us know which importers are important to you!
 </p>
 </div>
