--- a/content/directory.xhtml
+++ b/content/directory.xhtml
@@ -19,7 +19,7 @@ Contacts Service Importers: Coming Soon
 <div class='dir'>
 <img style="float:right" src="images/experiment.png"/>
 <p>
-The Browser Contacts add-on has an extensible importer layer,
+The Firefox Contacts add-on has an extensible importer layer,
 which will allow any site or developer to bring address data into
 the browser.
 </p>
